--- a/_posts/2024-06-10-psl.md
+++ b/_posts/2024-06-10-psl.md
@@ -5,7 +5,7 @@ author: "Abigail Dow"
 categories: opinion
 ---
 
-The Effects of Paid Sick Leave on Healthcare Utilisation: Evidence on Maternal Care (working paper)
+The Effects of Paid Sick Leave on Healthcare Utilisation: Evidence on Maternal Care (working paper, submitted)
 
 <!-- excerpt_separator -->
 
